--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,10 @@
+<!--
+ * @Author: 
+ * @Date: 2021-06-10 16:25:19
+ * @LastEditors: Chaoyue
+ * @LastEditTime: 2021-06-15 13:46:07
+ * @FilePath: \yStarry\public\index.html
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -24,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Y Starry</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
